Fix Facebook share button alignment
Fix Facebook share button alignment broken by #10.

--- a/source/styles/site.css
+++ b/source/styles/site.css
@@ -20,6 +20,7 @@ textarea {
    resize: none;
 }
 
-div.fb-like > span {
+div.fb-like > span,
+div.fb-share-button > span {
     vertical-align: initial !important;
 }
